# ticker

./: README.md  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
app/: build.gradle.kts
app/src/androidTest/java/tech/ssemaj/processclock/: ClockUiTest.kt  ClockViewModelTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/tech/ssemaj/processclock/: ClockViewModel.kt  MainActivity.kt  ZoneState.kt
app/src/main/java/tech/ssemaj/processclock/ui/: PacmanLane.kt
app/src/main/java/tech/ssemaj/processclock/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ticker/: build.gradle.kts  consumer-rules.pro
ticker/src/androidTest/java/tech/ssemaj/ticker/: TickerFdLifecycleTest.kt  TickerFdTest.kt  TickerFlowSemanticsTest.kt  TickerLeakTest.kt  TickerThreadCountTest.kt
ticker/src/main/cpp/: CMakeLists.txt  log.h  tick_dispatcher.cpp  tick_dispatcher.h  ticker_state.h  tickerfd_jni.cpp  wall_clock_timer.cpp  wall_clock_timer.h
ticker/src/main/java/tech/ssemaj/ticker/: Ticker.kt  TickerFd.kt  TickerFlow.kt
